--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>EDIT TITLE here</h1>
-      <p class="lead">by EDIT NAME(S) here</p>
+      <h1> A Dive Into Urban Suburban Affordables’ Owned Homes: Homeownership Trends and Sales  </h1>
+      <p class="lead">by Walter</p>
       <p class="lead">Last updated on editor CURRENT DATE</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
