--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section1">EDIT Section 1</a>
+            <a class="nav-link js-scroll-trigger" href="#section1">Introduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section2">EDIT Section 2</a>
+            <a class="nav-link js-scroll-trigger" href="#section2">Findings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section3">EDIT Section 3</a>
+            <a class="nav-link js-scroll-trigger" href="#section3">Methods</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#section4">EDIT Section 4</a>
+            <a class="nav-link js-scroll-trigger" href="#section4">Sources</a>
           </li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 1 label</h2>
+          <h2>Introduction</h2>
 
           <p class="lead">Pull readers into your data story with a compelling introduction. Notice how this paragraph appears in a larger font than others, because the HTML code begins with a "lead" class.</p>
 
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 2 Label</h2>
+          <h2>Findings</h2>
 
           <p>TELL your story and SHOW your evidence. When describing charts, maps, or tables that appear further below, refer to them "...as shown in Figure 1" or "...as shown in Table 1" and include those figure/table numbers in the titles or captions below.</p>
 
@@ -117,7 +117,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 3 Label</h2>
+          <h2>Methods</h2>
 
           <p>Create a separate section to describe how you obtained your data, key steps in your process, and cautions for interpreting its meaning. Write for an audience of future Trinity College students who may wish to replicate your steps. Write in HTML format and always include links to data sources, like this example from <a href='https://data.ct.gov'>CT Open Data</a>. Also link to your shared Google Sheets when appropriate.</p>
 
@@ -161,7 +161,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2>EDIT Section 4 Label: Advanced Tips</h2>
+          <h2>Sources: Advanced Tips</h2>
 
           <p>All of your data visualizations should be interactive. But if you need to insert a static image, you can upload a JPG or PNG to the GitHub repo, and insert it using the HTML image tag ("img") that points to a source image ("src") stored in your repo, as shown below:</p>
 
