--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
           <p class="lead">.</p>
 
-          <p>     The US housing market in late 2024 is facing a variety of challenges, primarily centered around rising home prices and diminished affordability. Among the biggest obstacles today is the ongoing issue of home affordability. Over the past several years, home prices have increased significantly due to factors like rising mortgage rates and inflationary pressures. As mortgage rates climb, borrowing becomes more expensive, significantly impacting new homebuyers’ ability to afford homes. This, combined with the already-high home prices, has created a situation where fewer people are able to purchase homes. 
-    Another significant issue is the limited housing supply, particularly in desirable urban and suburban areas. Homeowners are less motivated to sell their properties, especially considering the low mortgage rates they secured in previous years. This "lock-in effect" has contributed to the tight housing market. Builders, meanwhile, are facing significant challenges related to supply chain shortages and increased construction costs, further exacerbating the shortage of affordable housing options. We will focus on a specific CLT program enacted in 1992, Urban Suburban Affordables, Inc. (USA). <a href="https://cljct.org/what-we-do/housing-initiatives/"</a> USA Homes </a>, which we will refer to as homes owned by Urban Suburban Affordables, is a key affordable housing program created through a collaboration between the Christian Activities Council (CAC) and the Hartford Housing Authority.
+          <p>     The US housing market in late 2024 is facing a variety of challenges, primarily centered around rising home prices and diminished affordability. Among the biggest obstacles today is the ongoing issue of home affordability. Over the past several years, home prices have increased significantly due to factors like rising mortgage rates and inflationary pressures. As mortgage rates climb, borrowing becomes more expensive, significantly impacting new homebuyers’ ability to afford homes. This, combined with the already-high home prices, has created a situation where fewer people are able to purchase homes. We used tools like the West Hartford Property assessor to find out the value of each home (westhartfordct). 
+    Another significant issue is the limited housing supply, particularly in desirable urban and suburban areas. Homeowners are less motivated to sell their properties, especially considering the low mortgage rates they secured in previous years. This "lock-in effect" has contributed to the tight housing market. Builders, meanwhile, are facing significant challenges related to supply chain shortages and increased construction costs, further exacerbating the shortage of affordable housing options. We will focus on a specific CLT program enacted in 1992, Urban Suburban Affordables, Inc. (USA). <a href="https://cljct.org/what-we-do/housing-initiatives/"</a> USA Homes </a>, which we will refer to as homes owned by Urban Suburban Affordables, is a key affordable housing program created through a collaboration between the Christian Activities Council (CAC) and the Hartford Housing Authority. 
 </p>
              
      
@@ -159,7 +159,7 @@
 
           <h2>Sources: Advanced Tips</h2>
 
-          <p>All of your data visualizations should be interactive. But if you need to insert a static image, you can upload a JPG or PNG to the GitHub repo, and insert it using the HTML image tag ("img") that points to a source image ("src") stored in your repo, as shown below:</p>
+          <p>Assessment - Town of West Hartford. https://www.westhartfordct.gov/town-departments/assessment. Accessed 21 Nov. 2024.</p>
 
           <img src="sample-image.jpg" style="width: 100%; margin: 30px 0">
 
