--- a/index.html
+++ b/index.html
@@ -135,11 +135,9 @@
 
           <p>...later, insert a bibliography at the end of your data story:</p>
 
-          <h4>Works Cited:</h4>
+          <h4></h4>
 
-          <p>Lurye, Rebecca. “New Housing Code in Hartford Would Keep Slumlords from Hiding Behind LLCs.” Hartford Courant, May 31, 2019. <a href='https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html'>https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html</a>.</p>
-
-          <p>“Resident Town Export.” CT.Gov EdSight, <a href='https://public-edsight.ct.gov/Overview/Resident-Town-Dashboard/Resident-Town-Export'>https://public-edsight.ct.gov/Overview/Resident-Town-Dashboard/Resident-Town-Export</a>. Accessed 29 Nov. 2022.</p>
+        
 
           <br>
 
@@ -159,7 +157,7 @@
 
           <h2>Sources: Advanced Tips</h2>
 
-          <p>Assessment - Town of West Hartford. https://www.westhartfordct.gov/town-departments/assessment. Accessed 21 Nov. 2024.</p>
+          <p>Assessment - Town of West Hartford. a href='https://www.westhartfordct.gov/town-departments/assessment.'></a>. Accessed 21 Nov. 2024.</p>
 
           <img src="sample-image.jpg" style="width: 100%; margin: 30px 0">
 
