--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
           <h2>Sources: Advanced Tips</h2>
 
-          <p>Assessment - Town of West Hartford. a href='https://www.westhartfordct.gov/town-departments/assessment.'></a>. Accessed 21 Nov. 2024.</p>
+          <p>Assessment - Town of West Hartford. a href='https://www.westhartfordct.gov/town-departments/assessment.'>https://www.westhartfordct.gov/town-departments/assessment.</a>. Accessed 21 Nov. 2024.</p>
 
           <img src="sample-image.jpg" style="width: 100%; margin: 30px 0">
 
